--- a/setup.cfg
+++ b/setup.cfg
@@ -1,10 +1,10 @@
 [metadata]
 name = irxnlvl
-version = 0.9.1
+version = 0.9.2
 url = https://github.com/qcuaeh/irxnlvl
 description = Chemical rection energy diagram tool
-long_description = file: README.rst
-long_description_content_type = text/x-rst
+long_description = file: README.md
+long_description_content_type = text/markdown
 keywords = console jupyter
 license = LGPLv3+
 license_file = LICENSE
