--- a/setup.cfg
+++ b/setup.cfg
@@ -1,6 +1,6 @@
 [metadata]
-name = irxnlvl
-version = 0.9.4
+name = rxnplot
+version = 0.9.0
 url = https://github.com/qcuaeh/irxnlvl
 description = Chemical rection energy diagram tool
 #long_description = file: README.md
