Clean after setup

--- a/setup.cfg
+++ b/setup.cfg
@@ -1,11 +1,11 @@
 [metadata]
 name = rxnplot
 version = 0.9.0
-url = https://github.com/qcuaeh/irxnlvl
+url = https://github.com/qcuaeh/rxnplot
 description = Chemical rection energy diagram tool
 #long_description = file: README.md
 #long_description_content_type = text/markdown
-keywords = graphics jupyter
+keywords = reaction plot jupyter
 license = LGPLv3+
 license_file = LICENSE
 classifiers =
