--- a/setup.cfg
+++ b/setup.cfg
@@ -7,7 +7,7 @@ description = Chemical rection energy diagram tool
 #long_description_content_type = text/markdown
 keywords = reaction plot jupyter
 license = LGPLv3+
-license_file = LICENSE
+license_files = LICENSE
 classifiers =
    Programming Language :: Python :: 3 :: Only
    License :: OSI Approved :: GNU Lesser General Public License v3 or later (LGPLv3+)
