Minor changes, update README

--- a/setup.cfg
+++ b/setup.cfg
@@ -1,8 +1,8 @@
 [metadata]
 name = rxnplot
-version = 0.9.0
-url = https://github.com/qcuaeh/rxnplot
-description = Chemical rection energy diagram tool
+version = 0.9.1
+url = https://github.com/josemvas/rxnplot
+description = Tool to build energy diagrams of chemical reactions
 #long_description = file: README.md
 #long_description_content_type = text/markdown
 keywords = reaction plot jupyter
@@ -23,4 +23,3 @@ install_requires =
 [options.package_data]
 rxnplot =
    dat/*.frag
-
